--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_TEMPLATE_ID=template_w8fswfp
 VITE_SERVICE_ID=service_z8vzmfv
 VITE_EMAIL_PUBLIC_KEY=i-xrrLNzfyE1kwG1z
+VITE_GITHUB_URL=https://github.com/MagusM
