--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/three": "^0.149.0",
     "framer-motion": "^10.6.1",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "three": "^0.150.1"
   },
   "devDependencies": {
