--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^7.0.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "terser": "^5.16.9",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
