--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite",
+    "dev": "cross-env NODE_ENV=development vite --host",
     "build": "cross-env NODE_ENV=production tsc --noEmit && vite build",
     "preview": "vite preview"
   },
