--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
+    "eslint": "^8.38.0",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "terser": "^5.16.9",
