--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "cross-env NODE_ENV=development vite --host",
     "build": "cross-env NODE_ENV=production tsc --noEmit && vite build",
     "preview": "vite preview",
-    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -44,9 +44,11 @@
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.2.7",
     "terser": "^5.16.9",
     "typescript": "^4.9.3",
