--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite --host",
-    "build": "cross-env NODE_ENV=production tsc --noEmit && vite build",
+    "build": "cross-env NODE_ENV=production tsc --noEmit --noEmitOnError false && vite build",
     "preview": "vite preview",
     "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
